feat: Add the category routes to swagger
